--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "markup-inline-loader",
-  "version": "0.1.1",
+  "name": "svgloader",
+  "version": "0.1.0",
   "description": "inline markups to HTML: SVG, MathML, etc.",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/asnowwolf/markup-inline-loader.git"
+    "url": "git+https://github.com/Blocklevel/svgloader"
   },
   "keywords": [
     "webpack",
@@ -17,12 +17,12 @@
     "mathml",
     "markup"
   ],
-  "author": "Zhicheng Wang",
+  "author": "Jonas Kuiler",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/asnowwolf/markup-inline-loader/issues"
+    "url": "https://github.com/Blocklevel/svgloader/issues"
   },
-  "homepage": "https://github.com/asnowwolf/markup-inline-loader#readme",
+  "homepage": "https://github.com/Blocklevel/svgloader#readme",
   "devDependencies": {
     "should": "^9.0.2"
   },
